--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,10 @@ target 'onlineVidcall' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'onlineVidcallTests' do
     inherit! :complete
     # Pods for testing
