--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -166,6 +166,7 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
+            consumerProguardFiles 'proguard-project.txt'
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
             signingConfig signingConfigs.debug
@@ -175,10 +176,14 @@ android {
     }
 
     packagingOptions {
-        pickFirst "lib/armeabi-v7a/libc++_shared.so"
-        pickFirst "lib/arm64-v8a/libc++_shared.so"
-        pickFirst "lib/x86/libc++_shared.so"
-        pickFirst "lib/x86_64/libc++_shared.so"
+        pickFirst 'lib/x86/libc++_shared.so'
+        pickFirst 'lib/x86/libjsc.so'
+        pickFirst 'lib/x86_64/libjsc.so'
+        pickFirst 'lib/arm64-v8a/libjsc.so'
+        pickFirst 'lib/arm64-v8a/libc++_shared.so'
+        pickFirst 'lib/x86_64/libc++_shared.so'
+        pickFirst 'lib/armeabi-v7a/libc++_shared.so'
+        pickFirst 'lib/armeabi-v7a/libjsc.so'
     }
 
     // applicationVariants are e.g. debug, release
@@ -203,6 +208,18 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation(project(':react-native-jitsi-meet')) {
+    exclude group: 'com.facebook.react',module:'react-native-locale-detector'
+    exclude group: 'com.facebook.react',module:'react-native-vector-icons'
+    exclude group: 'com.facebook.react',module:'react-native-fetch-blob'
+    exclude group: 'com.facebook.react',module:'react-native-svg'
+    exclude group: 'com.facebook.react',module:'react-native-webview'
+    exclude group: 'com.facebook.react',module:'react-native-linear-gradient'
+    exclude group: 'com.facebook.react',module:'react-native-community-async-storage'
+    exclude group: 'com.facebook.react',module:'react-native-google-signin'
+    exclude group: 'com.facebook.react',module:'react-native-community_netinfo'
+    exclude group: 'com.facebook.react',module:'react-native-sound'
+}
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
