--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,9 +78,9 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    enableHermes: false,  // clean and rebuild if changing
     entryFile: "index.js",
     bundleAssetName: "app.bundle",
+    enableHermes: false,  // clean and rebuild if changing
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -131,7 +131,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.onlinevidcall"
+        applicationId "com.exemple"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -166,7 +166,6 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
-            consumerProguardFiles 'proguard-project.txt'
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
             signingConfig signingConfigs.debug
@@ -209,16 +208,7 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation(project(':react-native-jitsi-meet')) {
-    exclude group: 'com.facebook.react',module:'react-native-locale-detector'
-    exclude group: 'com.facebook.react',module:'react-native-vector-icons'
-    exclude group: 'com.facebook.react',module:'react-native-fetch-blob'
-    exclude group: 'com.facebook.react',module:'react-native-svg'
-    exclude group: 'com.facebook.react',module:'react-native-webview'
     exclude group: 'com.facebook.react',module:'react-native-linear-gradient'
-    exclude group: 'com.facebook.react',module:'react-native-community-async-storage'
-    exclude group: 'com.facebook.react',module:'react-native-google-signin'
-    exclude group: 'com.facebook.react',module:'react-native-community_netinfo'
-    exclude group: 'com.facebook.react',module:'react-native-sound'
 }
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
