--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="com.onlinevidcall">
+  package="com.exemple">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,7 +8,6 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
-      tools:replace="android:allowBackup"
       android:allowBackup="true"
       android:theme="@style/AppTheme">
       <activity
