--- a/ios/Exemple.xcodeproj/xcshareddata/xcschemes/Exemple-tvOS.xcscheme
+++ b/ios/Exemple.xcodeproj/xcshareddata/xcschemes/Exemple-tvOS.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "onlineVidcall-tvOS.app"
-               BlueprintName = "onlineVidcall-tvOS"
-               ReferencedContainer = "container:onlineVidcall.xcodeproj">
+               BuildableName = "Exemple-tvOS.app"
+               BlueprintName = "Exemple-tvOS"
+               ReferencedContainer = "container:Exemple.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "onlineVidcall-tvOSTests.xctest"
-               BlueprintName = "onlineVidcall-tvOSTests"
-               ReferencedContainer = "container:onlineVidcall.xcodeproj">
+               BuildableName = "Exemple-tvOSTests.xctest"
+               BlueprintName = "Exemple-tvOSTests"
+               ReferencedContainer = "container:Exemple.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "onlineVidcall-tvOS.app"
-            BlueprintName = "onlineVidcall-tvOS"
-            ReferencedContainer = "container:onlineVidcall.xcodeproj">
+            BuildableName = "Exemple-tvOS.app"
+            BlueprintName = "Exemple-tvOS"
+            ReferencedContainer = "container:Exemple.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "onlineVidcall-tvOS.app"
-            BlueprintName = "onlineVidcall-tvOS"
-            ReferencedContainer = "container:onlineVidcall.xcodeproj">
+            BuildableName = "Exemple-tvOS.app"
+            BlueprintName = "Exemple-tvOS"
+            ReferencedContainer = "container:Exemple.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
