--- a/ios/Exemple.xcodeproj/xcshareddata/xcschemes/Exemple.xcscheme
+++ b/ios/Exemple.xcodeproj/xcshareddata/xcschemes/Exemple.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "onlineVidcall.app"
-               BlueprintName = "onlineVidcall"
-               ReferencedContainer = "container:onlineVidcall.xcodeproj">
+               BuildableName = "Exemple.app"
+               BlueprintName = "Exemple"
+               ReferencedContainer = "container:Exemple.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "onlineVidcallTests.xctest"
-               BlueprintName = "onlineVidcallTests"
-               ReferencedContainer = "container:onlineVidcall.xcodeproj">
+               BuildableName = "ExempleTests.xctest"
+               BlueprintName = "ExempleTests"
+               ReferencedContainer = "container:Exemple.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "onlineVidcall.app"
-            BlueprintName = "onlineVidcall"
-            ReferencedContainer = "container:onlineVidcall.xcodeproj">
+            BuildableName = "Exemple.app"
+            BlueprintName = "Exemple"
+            ReferencedContainer = "container:Exemple.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "onlineVidcall.app"
-            BlueprintName = "onlineVidcall"
-            ReferencedContainer = "container:onlineVidcall.xcodeproj">
+            BuildableName = "Exemple.app"
+            BlueprintName = "Exemple"
+            ReferencedContainer = "container:Exemple.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
