--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '9.0'
+platform :ios, '10.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 def add_flipper_pods!(versions = {})
@@ -44,8 +44,8 @@ def flipper_post_install(installer)
   end
 end
 
-target 'onlineVidcall' do
-  # Pods for onlineVidcall
+target 'Exemple' do
+  # Pods for Exemple
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -77,11 +77,7 @@ target 'onlineVidcall' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
-
-  pod 'RNSVG', :path => '../node_modules/react-native-svg'
-
-  target 'onlineVidcallTests' do
+  target 'ExempleTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -98,10 +94,10 @@ target 'onlineVidcall' do
   end
 end
 
-target 'onlineVidcall-tvOS' do
-  # Pods for onlineVidcall-tvOS
+target 'Exemple-tvOS' do
+  # Pods for Exemple-tvOS
 
-  target 'onlineVidcall-tvOSTests' do
+  target 'Exemple-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
